--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+			<version>62.1</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
