added log.info. added JVM configuration to POM

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 file.upload-dir=./uploads
 
+
+#AWS configuration
+server.port=5000
